Add navbar and basic map component

--- a/src/_sass/mixins.css
+++ b/src/_sass/mixins.css
@@ -1,4 +1,4 @@
 /*
- * Variables for frontend design
+ * Basic mixins for multiple use in SCSS files
  * -----------------------------------------------
  */
