--- a/src/componentapp.css
+++ b/src/componentapp.css
@@ -1,8 +1,13 @@
-.container.template-app {
+/*
+ * Variables for frontend design
+ * -----------------------------------------------
+ */
+.hazard-app {
   background: #fff;
-  margin-top: 100px;
-  margin-bottom: 60px;
-  padding: 30px 30px 60px 30px;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  position: absolute;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.2); }
-  .container.template-app .copyright {
+  .hazard-app .copyright {
     color: #959595; }
