--- a/src/map/componentmap.css
+++ b/src/map/componentmap.css
@@ -10,3 +10,18 @@
   bottom: 0;
   z-index: 1000;
   background: #e1e1e1; }
+  .osw-map .loading-container {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    display: block;
+    z-index: 100;
+    top: 100px;
+    left: 20px; }
+    .osw-map .loading-container .osw-loading-child {
+      border: 0.5rem solid #e1e1e1;
+      border-top-color: black; }
+  .osw-map .mapboxgl-popup .mapboxgl-popup-tip {
+    color: rgba(255, 255, 255, 0.9); }
+  .osw-map .mapboxgl-popup .mapboxgl-popup-content {
+    background: rgba(255, 255, 255, 0.9); }
