--- a/src/map/componentmap.scss
+++ b/src/map/componentmap.scss
@@ -8,4 +8,28 @@
   bottom: 0;
   z-index: 1000;
   background: $lightGrey;
+
+  .loading-container {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    display: block;
+    z-index: 100;
+    top: 100px;
+    left: 20px;
+
+    .osw-loading-child {
+      border: .5rem solid $lightGrey;
+      border-top-color: black;
+    }
+  }
+
+  .mapboxgl-popup {
+    .mapboxgl-popup-tip {
+      color: rgba(255, 255, 255, 0.9);
+    }
+    .mapboxgl-popup-content {
+      background: rgba(255, 255, 255, 0.9);
+    }
+  }
 }
