--- a/src/map/componentmap.scss
+++ b/src/map/componentmap.scss
@@ -32,4 +32,13 @@
       background: rgba(255, 255, 255, 0.9);
     }
   }
+
+  .datetime-slider-container {
+    width: 100%;
+    height: 150px;
+    z-index: 100;
+    position: absolute;
+    bottom: 30px;
+    text-align: center;
+  }
 }
