--- a/src/map/componentmap.css
+++ b/src/map/componentmap.css
@@ -10,17 +10,6 @@
   bottom: 0;
   z-index: 1000;
   background: #e1e1e1; }
-  .osw-map .loading-container {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    display: block;
-    z-index: 100;
-    top: 100px;
-    left: 20px; }
-    .osw-map .loading-container .osw-loading-child {
-      border: 0.5rem solid #e1e1e1;
-      border-top-color: black; }
   .osw-map .mapboxgl-popup .mapboxgl-popup-tip {
     color: rgba(255, 255, 255, 0.9); }
   .osw-map .mapboxgl-popup .mapboxgl-popup-content {
@@ -40,3 +29,27 @@
     background: rgba(255, 255, 255, 0.9);
     top: 150px;
     left: 20px; }
+  .osw-map .datasource-container {
+    z-index: 100;
+    position: absolute;
+    width: 300px;
+    height: 160px;
+    background: rgba(255, 255, 255, 0.9);
+    bottom: 150px;
+    left: 20px;
+    padding: 5px;
+    font-size: .9rem; }
+    .osw-map .datasource-container .header {
+      display: inline-block;
+      width: 100%; }
+      .osw-map .datasource-container .header > div {
+        float: left;
+        display: inline-block;
+        height: 36px;
+        vertical-align: middle;
+        line-height: 36px; }
+      .osw-map .datasource-container .header > a {
+        float: right;
+        display: inline-block; }
+    .osw-map .datasource-container .record {
+      margin-top: 5px; }
