Add dummy data and update package.json to application
Update package.json for supporting gh-pages

Update package.json

Update readme.md

Add basic styling rules for tablet devices

Remove tmp files

--- a/src/map/componentmap.scss
+++ b/src/map/componentmap.scss
@@ -37,6 +37,13 @@
     left: 20px;
   }
 
+  @media screen and (max-width: $break-point-lg) {
+    .report-container {
+      width: 300px;
+      height: 400px;
+    }
+  }
+
   .datasource-container {
     z-index: 100;
     position: absolute;
@@ -64,6 +71,12 @@
     }
     .record {
       margin-top: 5px;
+    }
+  }
+
+  @media screen and (max-width: $break-point-lg) {
+    .datasource-container {
+      display: none;
     }
   }
 }
