--- a/src/map/componentreport.scss
+++ b/src/map/componentreport.scss
@@ -38,6 +38,7 @@
     overflow-y: auto;
     bottom: 0;
     height: calc(100% - 40px);
+    width: calc(100% - 10px);
     .table {
       background: transparent;
 
