--- a/src/map/componentmap.css
+++ b/src/map/componentmap.css
@@ -29,6 +29,10 @@
     background: rgba(255, 255, 255, 0.9);
     top: 150px;
     left: 20px; }
+  @media screen and (max-width: 1200px) {
+    .osw-map .report-container {
+      width: 300px;
+      height: 400px; } }
   .osw-map .datasource-container {
     z-index: 100;
     position: absolute;
@@ -53,3 +57,6 @@
         display: inline-block; }
     .osw-map .datasource-container .record {
       margin-top: 5px; }
+  @media screen and (max-width: 1200px) {
+    .osw-map .datasource-container {
+      display: none; } }
