--- a/src/map/componentreport.css
+++ b/src/map/componentreport.css
@@ -32,7 +32,8 @@
     overflow-x: hidden;
     overflow-y: auto;
     bottom: 0;
-    height: calc(100% - 40px); }
+    height: calc(100% - 40px);
+    width: calc(100% - 10px); }
     .osw-report .content .table {
       background: transparent; }
       .osw-report .content .table tbody tr {
