Add control buttons to slider

--- a/src/map/componentdatetimeslider.css
+++ b/src/map/componentdatetimeslider.css
@@ -5,6 +5,25 @@
   display: inline-block;
   pointer-events: all;
   cursor: pointer; }
+  .osw-datetime-slider .child-container {
+    display: inline-block;
+    position: relative;
+    float: left;
+    height: 100%; }
+    .osw-datetime-slider .child-container > span {
+      height: 100%;
+      width: 100%;
+      font-size: 26px; }
+      .osw-datetime-slider .child-container > span:hover {
+        font-size: 36px; }
+    .osw-datetime-slider .child-container i {
+      color: white; }
+    .osw-datetime-slider .child-container.container-left {
+      width: 30px; }
+    .osw-datetime-slider .child-container.container-middle {
+      width: calc(100% - 60px); }
+    .osw-datetime-slider .child-container.container-right {
+      width: 30px; }
   .osw-datetime-slider .axis {
     fill: gray;
     -webkit-user-select: none;
