--- a/src/map/componentdatetimeslider.scss
+++ b/src/map/componentdatetimeslider.scss
@@ -6,6 +6,38 @@
   pointer-events: all;
   cursor: pointer;
 
+  .child-container {
+    display: inline-block;
+    position: relative;
+    float: left;
+    height: 100%;
+
+    > span {
+      height: 100%;
+      width: 100%;
+      font-size: 26px;
+      &:hover {
+        font-size: 36px;
+      }
+    }
+
+    i {
+      color: white;
+    }
+
+    &.container-left {
+      width: 30px;
+    }
+
+    &.container-middle {
+      width: calc(100% - 60px);
+    }
+
+    &.container-right {
+      width: 30px;
+    }
+  }
+
   .axis {
     fill: gray;
     -webkit-user-select: none;
