--- a/src/map/componentmap.css
+++ b/src/map/componentmap.css
@@ -19,7 +19,7 @@
     height: 150px;
     z-index: 100;
     position: absolute;
-    bottom: 30px;
+    bottom: 100px;
     text-align: center; }
   .osw-map .report-container {
     z-index: 100;
@@ -29,10 +29,6 @@
     background: rgba(255, 255, 255, 0.9);
     top: 150px;
     left: 20px; }
-  @media screen and (max-width: 1200px) {
-    .osw-map .report-container {
-      width: 300px;
-      height: 400px; } }
   .osw-map .datasource-container {
     z-index: 100;
     position: absolute;
@@ -57,6 +53,18 @@
         display: inline-block; }
     .osw-map .datasource-container .record {
       margin-top: 5px; }
+  .osw-map .ticker-container {
+    width: 100%;
+    height: 30px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: rgba(255, 255, 255, 0.9); }
   @media screen and (max-width: 1200px) {
+    .osw-map .report-container {
+      width: 300px;
+      height: 400px; }
     .osw-map .datasource-container {
+      display: none; }
+    .osw-map .ticker-container {
       display: none; } }
