--- a/src/map/componentmap.css
+++ b/src/map/componentmap.css
@@ -14,6 +14,8 @@
     color: rgba(255, 255, 255, 0.9); }
   .osw-map .mapboxgl-popup .mapboxgl-popup-content {
     background: rgba(255, 255, 255, 0.9); }
+  .osw-map .mapboxgl-ctrl-top-right {
+    top: 100px; }
   .osw-map .datetime-slider-container {
     width: 100%;
     height: 150px;
