--- a/src/map/componentmap.scss
+++ b/src/map/componentmap.scss
@@ -18,6 +18,10 @@
     }
   }
 
+  .mapboxgl-ctrl-top-right {
+    top: 100px;
+
+  }
   .datetime-slider-container {
     width: 100%;
     height: 150px;
