--- a/src/map/componentmap.scss
+++ b/src/map/componentmap.scss
@@ -33,7 +33,7 @@
     width: 400px;
     height: 600px;
     background: rgba(255, 255, 255, 0.9);
-    top: 150px;
+    top: 250px;
     left: 20px;
   }
 
@@ -67,14 +67,21 @@
     }
   }
 
-
-
   .ticker-container {
     width: 100%;
     height: 30px;
     position: absolute;
     bottom: 0;
     left: 0;
+    background: rgba(255, 255, 255, 0.9);
+  }
+
+  .data-refresher-container {
+    width: 400px;
+    height: 110px;
+    position: absolute;
+    left: 20px;
+    top: 105px;
     background: rgba(255, 255, 255, 0.9);
   }
 
