--- a/src/map/componentmap.css
+++ b/src/map/componentmap.css
@@ -16,6 +16,8 @@
     background: rgba(255, 255, 255, 0.9); }
   .osw-map .mapboxgl-ctrl-top-right {
     top: 100px; }
+  .osw-map .mapboxgl-ctrl-attrib {
+    background-color: white; }
   .osw-map .datetime-slider-container {
     width: 100%;
     height: 150px;
