--- a/src/map/componentmap.scss
+++ b/src/map/componentmap.scss
@@ -20,8 +20,12 @@
 
   .mapboxgl-ctrl-top-right {
     top: 100px;
-
   }
+
+  .mapboxgl-ctrl-attrib {
+    background-color: white;
+  }
+
   .datetime-slider-container {
     width: 100%;
     height: 150px;
