--- a/src/map/componentticker.css
+++ b/src/map/componentticker.css
@@ -1,10 +1,50 @@
+@-webkit-keyframes ticker {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    visibility: visible; }
+  100% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0); } }
+
+@keyframes ticker {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    visibility: visible; }
+  100% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0); } }
+
 .osw-ticker {
   padding: 5px 250px 5px 250px;
   width: 100%;
   height: 100%;
   text-align: center; }
-  .osw-ticker .ticker-info {
+  .osw-ticker * {
+    box-sizing: border-box; }
+  .osw-ticker .ticker-wrap {
     display: inline-block;
-    cursor: pointer; }
-    .osw-ticker .ticker-info:hover {
-      font-weight: 600; }
+    width: 100%;
+    overflow: hidden;
+    box-sizing: content-box;
+    padding-left: 100%; }
+    .osw-ticker .ticker-wrap .ticker {
+      display: inline-block;
+      white-space: nowrap;
+      padding-right: 100%;
+      box-sizing: content-box;
+      -webkit-animation-iteration-count: infinite;
+      animation-iteration-count: infinite;
+      -webkit-animation-timing-function: linear;
+      animation-timing-function: linear;
+      -webkit-animation-name: ticker;
+      animation-name: ticker;
+      -webkit-animation-duration: 30s;
+      animation-duration: 30s; }
+      .osw-ticker .ticker-wrap .ticker__item {
+        display: inline-block;
+        padding: 0 2rem;
+        cursor: pointer; }
+        .osw-ticker .ticker-wrap .ticker__item:hover {
+          font-weight: 600; }
