--- a/src/map/componentticker.scss
+++ b/src/map/componentticker.scss
@@ -1,14 +1,71 @@
+$duration: 30s;
+
+@-webkit-keyframes ticker {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+  }
+
+  100% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+
+@keyframes ticker {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+  }
+
+  100% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+
 .osw-ticker {
   padding: 5px 250px 5px 250px;
   width: 100%;
   height: 100%;
   text-align: center;
-  .ticker-info {
-    display: inline-block;
-    cursor: pointer;
 
-    &:hover {
-      font-weight: 600;
+  * {
+    box-sizing: border-box;
+  }
+
+  .ticker-wrap {
+    display: inline-block;
+    width: 100%;
+    overflow: hidden;
+    box-sizing: content-box;
+    padding-left: 100%;
+
+    .ticker {
+      display: inline-block;
+      white-space: nowrap;
+      padding-right: 100%;
+      box-sizing: content-box;
+      -webkit-animation-iteration-count: infinite;
+      animation-iteration-count: infinite;
+      -webkit-animation-timing-function: linear;
+      animation-timing-function: linear;
+      -webkit-animation-name: ticker;
+      animation-name: ticker;
+      -webkit-animation-duration: $duration;
+      animation-duration: $duration;
+
+      &__item {
+        display: inline-block;
+        padding: 0 2rem;
+        cursor: pointer;
+
+        &:hover {
+          font-weight: 600;
+        }
+      }
     }
   }
 }
